--- a/src/css/index.css
+++ b/src/css/index.css
@@ -176,6 +176,19 @@ body{
 	background: red;
 }
 
+.talk .talk-content ul li{
+	padding: 0 5px;
+	margin: 0;
+}
+
+.talk .talk-content ul li span{
+	display: inline-block;
+	margin: 0 5px;
+	background: #ededed;
+	border: 1px solid #dddddd;
+	border-radius: 3px;
+}
+
 .talk .talk-bottom{
 	border-top: 1px solid #e5e5e5;
 }
