--- a/src/css/index.css
+++ b/src/css/index.css
@@ -170,7 +170,7 @@ body{
 	display: block;
 }
 
-/*聊天窗口*/
+/*聊天窗口--个人*/
 .talk .talk-content{
 	height: calc(100% - 200px);
 	overflow: auto;
@@ -200,6 +200,11 @@ body{
     opacity: .1;
 }
 
+.talk .talk-content ul{
+	margin: 0;
+    padding: 0;
+}
+
 .talk .talk-content ul li{
 	padding: 0 5px;
 	margin: 20px 0;
@@ -214,6 +219,7 @@ body{
 .talk .talk-content ul li font{
     display: inline-block;
     min-width: 60px;
+    max-width: 463px;
     float: left;
     margin: 5px 5px 10px 5px;
 }
@@ -224,7 +230,7 @@ body{
     background: #f9f9f9;
     border: 1px solid #dddddd;
     border-radius: 3px;
-    max-width: 425px;
+    max-width: 463px;
     float: left;
     word-wrap: break-word;
     padding: 5px;
@@ -276,6 +282,7 @@ body{
     float: right;
     font-size: 12px;
     cursor: pointer;
+    margin: 0 5px 0 0;
 }
 
 .talk .talk-bottom button:focus, .talk .talk-bottom button:hover {
@@ -287,6 +294,139 @@ body{
 }
 
 .talk .talk-bottom button:active {
+    background-color: #f5f5f5;
+    color: #666;
+    border-color: rgba(0,0,0,.2);
+    border-top-color: rgba(0,0,0,.3);
+    background-image: none;
+    box-shadow: inset 0 2px 4px rgba(0,0,0,.1);
+}
+
+
+/*聊天窗口--word*/
+.world .talk-content{
+	height: calc(100% - 200px);
+	overflow: auto;
+}
+
+.world .talk-content::-webkit-scrollbar {
+    width: 5px;
+    height: 20px;
+    background-color: #fafafa;
+    border-radius: 5px;
+    opacity: .1;
+}
+
+.world .talk-content::-webkit-scrollbar-thumb {
+    height: 10px;
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
+    background-color: #ededed;
+    opacity: .1;
+}
+
+.world .talk-content::-webkit-scrollbar-track {
+    display: block;
+    -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
+    border-radius: 5px;
+    background-color: #fafafa;
+    opacity: .1;
+}
+
+.world .talk-content ul{
+	margin: 0;
+    padding: 0;
+}
+
+.world .talk-content ul li{
+	padding: 0 5px;
+	margin: 20px 0;
+	list-style-type: none;
+}
+
+.world .talk-content ul li p{
+	overflow: hidden;
+	margin: 0;
+}
+
+.world .talk-content ul li font{
+    display: inline-block;
+    min-width: 60px;
+    max-width: 223px;
+    float: left;
+    margin: 5px 5px 10px 5px;
+}
+
+.world .talk-content ul li span{
+    display: inline-block;
+    margin: 0 5px;
+    background: #f9f9f9;
+    border: 1px solid #dddddd;
+    border-radius: 3px;
+    max-width: 223px;
+    float: left;
+    word-wrap: break-word;
+    padding: 5px;
+}
+
+.world .talk-bottom{
+	border-top: 1px solid #e5e5e5;
+}
+
+.world .talk-bottom textarea{
+    height: 100px;
+    width: 96%;
+    padding: 4px 2%;
+    border: 0;
+    background: #fff;
+    color: #666;
+    -webkit-transition: all linear .2s;
+    transition: all linear .2s;
+    border-radius: 4px;
+    outline: none;
+    resize: none;
+}
+
+.world .talk-bottom button{
+	-webkit-appearance: none;
+    margin: 0;
+    border: none;
+    overflow: visible;
+    font: inherit;
+    color: #666;
+    text-transform: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 12px;
+    background: #f7f7f7;
+    vertical-align: middle;
+    line-height: 28px;
+    min-height: 30px;
+    font-size: 1rem;
+    text-decoration: none;
+    text-align: center;
+    border: 1px solid rgba(0,0,0,.2);
+    border-bottom-color: rgba(0,0,0,.3);
+    background-origin: border-box;
+    background-image: -webkit-linear-gradient(top,#fff,#eee);
+    background-image: linear-gradient(to bottom,#fff,#eee);
+    border-radius: 4px;
+    text-shadow: 0 1px 0 #fff;
+    float: right;
+    font-size: 12px;
+    cursor: pointer;
+    margin: 0 5px 0 0;
+}
+
+.world .talk-bottom button:focus, .talk .talk-bottom button:hover {
+    background-color: #fafafa;
+    color: #666;
+    outline: 0;
+    text-decoration: none;
+    background-image: none;
+}
+
+.world .talk-bottom button:active {
     background-color: #f5f5f5;
     color: #666;
     border-color: rgba(0,0,0,.2);
