--- a/src/css/index.css
+++ b/src/css/index.css
@@ -234,6 +234,19 @@ body{
     float: left;
     word-wrap: break-word;
     padding: 5px;
+    color: #1d1d1d;
+}
+
+.talk .talk-content ul .me font{
+    float: right;
+    text-align: right;
+}
+
+.talk .talk-content ul .me span{
+    float: right;
+    text-align: right;
+    background: #b0e46e;
+    border:0;
 }
 
 .talk .talk-bottom{
@@ -246,7 +259,8 @@ body{
     padding: 4px 2%;
     border: 0;
     background: #fff;
-    color: #666;
+    color: #333;
+    font-size: 15px;
     -webkit-transition: all linear .2s;
     transition: all linear .2s;
     border-radius: 4px;
@@ -433,4 +447,11 @@ body{
     border-top-color: rgba(0,0,0,.3);
     background-image: none;
     box-shadow: inset 0 2px 4px rgba(0,0,0,.1);
+}
+
+.msg-init{
+    text-align: center;
+    font-size: 14px;
+    color: #787878;
+    margin-top: 200px;
 }
