--- a/src/css/index.css
+++ b/src/css/index.css
@@ -171,12 +171,12 @@ body{
 }
 
 /*聊天窗口--个人*/
-.talk .talk-content{
+.talk-content{
 	height: calc(100% - 200px);
 	overflow: auto;
 }
 
-.talk .talk-content::-webkit-scrollbar {
+.talk-content::-webkit-scrollbar {
     width: 5px;
     height: 20px;
     background-color: #fafafa;
@@ -184,7 +184,7 @@ body{
     opacity: .1;
 }
 
-.talk .talk-content::-webkit-scrollbar-thumb {
+.talk-content::-webkit-scrollbar-thumb {
     height: 10px;
     border-radius: 5px;
     -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
@@ -192,7 +192,7 @@ body{
     opacity: .1;
 }
 
-.talk .talk-content::-webkit-scrollbar-track {
+.talk-content::-webkit-scrollbar-track {
     display: block;
     -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
     border-radius: 5px;
@@ -200,31 +200,31 @@ body{
     opacity: .1;
 }
 
-.talk .talk-content ul{
+.talk-content ul{
 	margin: 0;
     padding: 0;
 }
 
-.talk .talk-content ul li{
+.talk-content ul li{
 	padding: 0 5px;
 	margin: 20px 0;
 	list-style-type: none;
 }
 
-.talk .talk-content ul li p{
-	overflow: hidden;
-	margin: 0;
+.talk-content ul li p{
+    overflow: hidden;
+    margin: 0;
 }
 
-.talk .talk-content ul li font{
-    display: inline-block;
-    min-width: 60px;
-    max-width: 463px;
-    float: left;
-    margin: 5px 5px 10px 5px;
+.talk-content ul font{
+    text-align: left;
+    display: block;
+    margin-bottom: 10px;
+    margin-left: 6px;
 }
 
-.talk .talk-content ul li span{
+
+.talk-content ul li span{
     display: inline-block;
     margin: 0 5px;
     background: #f9f9f9;
@@ -237,23 +237,24 @@ body{
     color: #1d1d1d;
 }
 
-.talk .talk-content ul .me font{
-    float: right;
+.talk-content ul .me font{
     text-align: right;
+    display: block;
+    margin-bottom: 10px;
 }
 
-.talk .talk-content ul .me span{
+.talk-content ul .me span{
     float: right;
     text-align: right;
     background: #b0e46e;
     border:0;
 }
 
-.talk .talk-bottom{
+.talk-bottom{
 	border-top: 1px solid #e5e5e5;
 }
 
-.talk .talk-bottom textarea{
+.talk-bottom textarea{
     height: 100px;
     width: 96%;
     padding: 4px 2%;
@@ -268,7 +269,7 @@ body{
     resize: none;
 }
 
-.talk .talk-bottom button{
+.talk-bottom button{
 	-webkit-appearance: none;
     margin: 0;
     border: none;
@@ -299,7 +300,7 @@ body{
     margin: 0 5px 0 0;
 }
 
-.talk .talk-bottom button:focus, .talk .talk-bottom button:hover {
+.talk-bottom button:focus, .talk .talk-bottom button:hover {
     background-color: #fafafa;
     color: #666;
     outline: 0;
@@ -307,7 +308,7 @@ body{
     background-image: none;
 }
 
-.talk .talk-bottom button:active {
+.talk-bottom button:active {
     background-color: #f5f5f5;
     color: #666;
     border-color: rgba(0,0,0,.2);
@@ -316,138 +317,6 @@ body{
     box-shadow: inset 0 2px 4px rgba(0,0,0,.1);
 }
 
-
-/*聊天窗口--word*/
-.world .talk-content{
-	height: calc(100% - 200px);
-	overflow: auto;
-}
-
-.world .talk-content::-webkit-scrollbar {
-    width: 5px;
-    height: 20px;
-    background-color: #fafafa;
-    border-radius: 5px;
-    opacity: .1;
-}
-
-.world .talk-content::-webkit-scrollbar-thumb {
-    height: 10px;
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
-    background-color: #ededed;
-    opacity: .1;
-}
-
-.world .talk-content::-webkit-scrollbar-track {
-    display: block;
-    -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
-    border-radius: 5px;
-    background-color: #fafafa;
-    opacity: .1;
-}
-
-.world .talk-content ul{
-	margin: 0;
-    padding: 0;
-}
-
-.world .talk-content ul li{
-	padding: 0 5px;
-	margin: 20px 0;
-	list-style-type: none;
-}
-
-.world .talk-content ul li p{
-	overflow: hidden;
-	margin: 0;
-}
-
-.world .talk-content ul li font{
-    display: inline-block;
-    min-width: 60px;
-    max-width: 223px;
-    float: left;
-    margin: 5px 5px 10px 5px;
-}
-
-.world .talk-content ul li span{
-    display: inline-block;
-    margin: 0 5px;
-    background: #f9f9f9;
-    border: 1px solid #dddddd;
-    border-radius: 3px;
-    max-width: 223px;
-    float: left;
-    word-wrap: break-word;
-    padding: 5px;
-}
-
-.world .talk-bottom{
-	border-top: 1px solid #e5e5e5;
-}
-
-.world .talk-bottom textarea{
-    height: 100px;
-    width: 96%;
-    padding: 4px 2%;
-    border: 0;
-    background: #fff;
-    color: #666;
-    -webkit-transition: all linear .2s;
-    transition: all linear .2s;
-    border-radius: 4px;
-    outline: none;
-    resize: none;
-}
-
-.world .talk-bottom button{
-	-webkit-appearance: none;
-    margin: 0;
-    border: none;
-    overflow: visible;
-    font: inherit;
-    color: #666;
-    text-transform: none;
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 0 12px;
-    background: #f7f7f7;
-    vertical-align: middle;
-    line-height: 28px;
-    min-height: 30px;
-    font-size: 1rem;
-    text-decoration: none;
-    text-align: center;
-    border: 1px solid rgba(0,0,0,.2);
-    border-bottom-color: rgba(0,0,0,.3);
-    background-origin: border-box;
-    background-image: -webkit-linear-gradient(top,#fff,#eee);
-    background-image: linear-gradient(to bottom,#fff,#eee);
-    border-radius: 4px;
-    text-shadow: 0 1px 0 #fff;
-    float: right;
-    font-size: 12px;
-    cursor: pointer;
-    margin: 0 5px 0 0;
-}
-
-.world .talk-bottom button:focus, .talk .talk-bottom button:hover {
-    background-color: #fafafa;
-    color: #666;
-    outline: 0;
-    text-decoration: none;
-    background-image: none;
-}
-
-.world .talk-bottom button:active {
-    background-color: #f5f5f5;
-    color: #666;
-    border-color: rgba(0,0,0,.2);
-    border-top-color: rgba(0,0,0,.3);
-    background-image: none;
-    box-shadow: inset 0 2px 4px rgba(0,0,0,.1);
-}
 
 .msg-init{
     text-align: center;
