--- a/src/css/index.css
+++ b/src/css/index.css
@@ -61,6 +61,13 @@ body{
     cursor: pointer;
     position: relative;
 }
+.pic{
+    width: 46px;
+    margin: 0 auto;
+    display: block;
+    margin-top: 30px;
+    cursor: pointer;
+}
 
 .friend-top-left{
 	border-right: 1px solid #E3E0DE;
@@ -74,6 +81,10 @@ body{
 	margin-bottom: 1px solid #E3E0DE;
 	cursor: pointer;
 }
+.friend-block:hover{
+    background: #d6d6d7 !important;
+}
+
 .onchat{
 	background: #C9C7C6;
 }
